--- a/VectorEditor.UI/MainWindow.axaml
+++ b/VectorEditor.UI/MainWindow.axaml
@@ -56,12 +56,12 @@
                 <TextBlock Text="PROJECT" FontWeight="Bold" Margin="15,10" Opacity="0.6" />
                 <Button Classes="MenuLink" Click="NewProject">New Project</Button>
                 <Button Classes="MenuLink" Click="OpenFile">Open File</Button>
-                <Button Content="Save" Click="SaveFile" Classes="MenuLink"/>
+                <Button Content="Save" Click="SaveFile" Classes="MenuLink" />
                 <Separator Margin="10" Opacity="0.2" />
                 <TextBlock Text="EXPORT" FontWeight="Bold" Margin="15,10" Opacity="0.6" />
-                <Button Content="Export PNG" Click="ExportPng" Classes="MenuLink"/>
-                <Button Content="Export JPG" Click="ExportJpg" Classes="MenuLink"/>
-                <Button Content="Export SVG" Click="ExportSvg" Classes="MenuLink"/>
+                <Button Content="Export PNG" Click="ExportPng" Classes="MenuLink" />
+                <Button Content="Export JPG" Click="ExportJpg" Classes="MenuLink" />
+                <Button Content="Export SVG" Click="ExportSvg" Classes="MenuLink" />
             </StackPanel>
         </SplitView.Pane>
 
@@ -178,50 +178,60 @@
                             <Button Background="Magenta" Classes="Colors" />
                             <Button Background="HotPink" Classes="Colors" />
                         </WrapPanel>
-                        
+
                         <StackPanel Orientation="Horizontal" Spacing="8" Margin="0,10,0,0">
                             <ToggleButton x:Name="StrokeModeButton"
                                           Content="Stroke"
                                           IsChecked="True"
-                                          Click="ColorModeChanged"/>
+                                          Click="ColorModeChanged" />
 
                             <ToggleButton x:Name="FillModeButton"
                                           Content="Fill"
-                                          Click="ColorModeChanged"/>
+                                          Click="ColorModeChanged" />
                         </StackPanel>
 
-                        
+
                         <StackPanel Orientation="Horizontal" Margin="0,5">
                             <TextBlock>R:</TextBlock>
-                            <TextBox Classes="Small" Margin="3,0,3,0" Name="InputColorR" TextChanged="Color_InputChange">0</TextBox>
+                            <TextBox Classes="Small" Margin="3,0,3,0" Name="InputColorR"
+                                     TextChanged="Color_InputChange">
+                                0
+                            </TextBox>
                             <TextBlock>G:</TextBlock>
-                            <TextBox Classes="Small" Margin="3,0,3,0" Name="InputColorG" TextChanged="Color_InputChange">0</TextBox>
+                            <TextBox Classes="Small" Margin="3,0,3,0" Name="InputColorG"
+                                     TextChanged="Color_InputChange">
+                                0
+                            </TextBox>
                             <TextBlock>B:</TextBlock>
-                            <TextBox Classes="Small" Margin="3,0,0,0" Name="InputColorB" TextChanged="Color_InputChange">0</TextBox>
+                            <TextBox Classes="Small" Margin="3,0,0,0" Name="InputColorB"
+                                     TextChanged="Color_InputChange">
+                                0
+                            </TextBox>
                             <Panel Name="ColorPreview"
-                                    Width="17" Height="17"
-                                    Background="Black"
-                                    Margin="15,0,0,0"
-                                    />
-                            
+                                   Width="17" Height="17"
+                                   Background="Black"
+                                   Margin="15,0,0,0" />
+
                         </StackPanel>
                         <TextBlock Text="OPACITY" FontWeight="Bold" Opacity="0.6" Margin="0, 15,0,0" />
                         <StackPanel Orientation="Horizontal">
-                            <Slider Value="100" Minimum="0" Maximum="100" MinWidth="120" 
-                                    PointerWheelChanged="Opacity_PointerWheelChanged" 
-                                    ValueChanged="Opacity_SliderChanged" 
-                                    Name="OpacitySlider"/>
-    
-                            <TextBox Classes="Small" Margin="3,0,3,0" 
-                                    Name="OpacityInput" 
-                                    TextChanged="Opacity_InputChange">100</TextBox>
+                            <Slider Value="100" Minimum="0" Maximum="100" MinWidth="120"
+                                    PointerWheelChanged="Opacity_PointerWheelChanged"
+                                    ValueChanged="Opacity_SliderChanged"
+                                    Name="OpacitySlider" />
 
-                            <CheckBox Content="Grid" 
-                                      IsChecked="True" 
+                            <TextBox Classes="Small" Margin="3,0,3,0"
+                                     Name="OpacityInput"
+                                     TextChanged="Opacity_InputChange">
+                                100
+                            </TextBox>
+
+                            <CheckBox Content="Grid"
+                                      IsChecked="True"
                                       Click="ToggleGrid"
                                       Margin="10,0,0,0"
                                       VerticalAlignment="Center"
-                                      ToolTip.Tip="Włącz/Wyłącz siatkę i przyciąganie"/>
+                                      ToolTip.Tip="Włącz/Wyłącz siatkę i przyciąganie" />
                         </StackPanel>
                         <Grid RowDefinitions="*" ColumnDefinitions="*, auto, auto">
                             <TextBlock Text="LAYERS"
@@ -232,34 +242,31 @@
                             <Button Grid.Column="1"
                                     VerticalAlignment="Center"
                                     Click="AddLayer"
-                                    ToolTip.Tip="Add Layer">+</Button>
-
-                            <Button Grid.Column="2"
-                                    VerticalAlignment="Center"
-                                    Click="RemoveLayer"
-                                    ToolTip.Tip="Remove Layer">-</Button>
+                                    ToolTip.Tip="Add Layer">
+                                +
+                            </Button>
                         </Grid>
 
                         <StackPanel x:Name="LayerGoBack"
                                     Orientation="Horizontal"
                                     Spacing="6"
-                                    Margin="0 8 0 8"/>
+                                    Margin="0 8 0 8" />
 
                         <Panel Name="LayersWrapper" Margin="0,5">
-                            <ScrollViewer Name="LayersScrollViewer" 
-                                          VerticalScrollBarVisibility="Auto" 
+                            <ScrollViewer Name="LayersScrollViewer"
+                                          VerticalScrollBarVisibility="Auto"
                                           Height="300">
                                 <StackPanel x:Name="LayersStackPanel"
                                             Orientation="Vertical"
                                             Spacing="4"
                                             Background="Transparent"
-                                            DragDrop.AllowDrop="True"/>
+                                            DragDrop.AllowDrop="True" />
                             </ScrollViewer>
 
                             <Canvas IsHitTestVisible="False" VerticalAlignment="Top">
-                                <Border Name="DropIndicator" 
-                                        Height="2" 
-                                        Background="#0078D7" 
+                                <Border Name="DropIndicator"
+                                        Height="2"
+                                        Background="#0078D7"
                                         IsVisible="False"
                                         HorizontalAlignment="Stretch"
                                         ZIndex="1000">
